fix: text area on small displays

--- a/src/css/comment-form.scss
+++ b/src/css/comment-form.scss
@@ -78,8 +78,8 @@
         }
 
         textarea {
-          width: 100%;
-          height: 6rem;
+          width: calc(100% - 0.75rem);
+          height: 8rem;
         }
 
         button {
